--- a/Profile-Card-HTML-CSS/style.css
+++ b/Profile-Card-HTML-CSS/style.css
@@ -1,4 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+}
+
+.image {
+    position: relative;
+    height: 150px;
+    width: 150px;
+}
+
+.image .profile-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
