--- a/5.Loader-Animation/style.css
+++ b/5.Loader-Animation/style.css
@@ -5,8 +5,31 @@
 }
 
 section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
     width: 100%;
     background: #c8e6c9;
-    display: flex;
+}
+
+section .dots span {
+    position: absolute;
+    height: 10px;
+    width: 10px;
+    background: #111;
+    border-radius: 50%;
+    transform: rotate(calc(var(--i)* (360deg / 15))) translateY(35px);
+    animation: animate 1.5s linear infinite;
+    animation-delay: calc(var(--i) * 0.1s);
+    opacity: 0;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
