--- a/6.Resp-Navbar/style.css
+++ b/6.Resp-Navbar/style.css
@@ -51,7 +51,7 @@ nav .menu {
     transition: all 0.2s ease;
 }
 
-.menu ul a:hover::before {
+.menu ul a:hover:before {
     content: '';
     position: absolute;
     top: 0;
@@ -63,4 +63,64 @@ nav .menu {
 
 .menu ul a:hover {
     color: #3498db;
+}
+
+nav label.button {
+    color: #31344b;
+    font-size: 18px;
+    cursor: pointer;
+    display: none;
+}
+
+nav label.cancel {
+    position: absolute;
+    top: 25px;
+    right: 30px;
+}
+
+#check {
+    display: none;
+}
+
+
+/* addding responsiveness to the website */
+
+@media(max-width:940px) {
+    .menu ul {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        max-width: 400px;
+        padding-top: 45px;
+        height: 100%;
+        background: #ecf0f3;
+        box-shadow: 0 5px 10px #b0b0b5;
+        z-index: 12;
+        transition: all 0.3s ease;
+    }
+    .menu ul a {
+        display: block;
+        font-size: 23px;
+        width: 100%;
+        margin-top: 30px;
+        box-shadow: none;
+        text-align: center;
+    }
+    .menu ul a:hover:before {
+        -shadow: none;
+    }
+    nav label.bars {
+        display: block;
+    }
+    #check:checked~label.bars {
+        display: none;
+    }
+    #check:checked~ul label.cancel {
+        display: block;
+    }
+    #check:checked~ul {
+        left: 0;
+    }
 }
