--- a/7.NeoMorphism-SideBar/style.css
+++ b/7.NeoMorphism-SideBar/style.css
@@ -7,3 +7,106 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body {
+    background: #ecf0f3;
+}
+
+.side-bar {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100vh;
+    background: #ecf0f3;
+    padding: 12px;
+    box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1, inset -3px -3px 7px #ffffff, inset 3px 5px #ceced1;
+}
+
+.side-bar .title .logo {
+    font-size: 27px;
+    font-weight: 600;
+    color: #31344b;
+}
+
+.side-bar ul {
+    margin-top: 35px;
+    list-style: none;
+}
+
+.side-bar ul a {
+    color: #31344b;
+    text-decoration: none;
+    display: block;
+    margin-top: 12px;
+    font-size: 18px;
+    font-weight: 400;
+    padding: 10px 25px;
+    border-radius: 6px;
+    box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1, inset -3px -3px 7px #ffffff;
+    ;
+    position: relative;
+}
+
+.side-bar ul i {
+    margin-right: 10px;
+}
+
+.media-icons {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.media-icons a {
+    margin: 0 4px;
+    font-size: 17px;
+    cursor: pointer;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    text-decoration: none;
+    box-shadow: -3px -3px 7px #ffffff, 3px 3px 5px #ceced1, inset -3px -3px 7px #ffffff;
+    position: relative;
+}
+
+.side-bar ul a:hover::before,
+.media-icons a:hover::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: inset -3px -3px 7px #ffffff, inset 3px 5px #ceced1;
+}
+
+.side-bar ul a:hover::before {
+    border-radius: 6px;
+}
+
+.side-bar ul a:hover {
+    color: #3498db;
+}
+
+.media-icons a:hover::before {
+    border-radius: 50%;
+}
+
+.media-icons a:nth-child(1) {
+    color: #4267b2;
+}
+
+.media-icons a:nth-child(2) {
+    color: #e1306c;
+}
+
+.media-icons a:nth-child(3) {
+    color: #111;
+}
+
+.media-icons a:nth-child(4) {
+    color: #4267b2;
+}
